src/css/popup.css
.popup-start.mdl-card,
body {
    min-width: 600px;
}

.shrinkWindow {
    max-height: 62px;
}


/*Grid style overrides*/

.jsgrid-selected-row>.jsgrid-cell,
.jsgrid-selected-row.jsgrid-alt-row>.jsgrid-cell {
    background: #eee;
    border-color: #607d8b;
}

.jsgrid-cell,
.jsgrid-edit-row>.jsgrid-cell,
.jsgrid-filter-row>.jsgrid-cell,
.jsgrid-grid-body,
.jsgrid-grid-header,
.jsgrid-header-row>.jsgrid-header-cell,
.jsgrid-insert-row>.jsgrid-cell {
    border-left: none;
    border-right: none;
    border-color: #607d8b;
}

.jsgrid-row,
.jsgrid-alt-row {
    height: 45px;
}

.jsgrid-alt-row>.jsgrid-cell {
    background: white;
}

.jsgrid-pager-nav-button a,
.jsgrid-pager-page a {
    color: #607d8b;
}

.jsgrid-table {
    width: 100%!important;
}


/*Checkbox*/

input[type="checkbox"] {
    position: relative;
    top: -0.375rem;
    margin: 0 1rem 0 0;
    cursor: pointer;
}

input[type="checkbox"]:before {
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    content: "";
    position: absolute;
    left: 0;
    z-index: 1;
    width: 1rem;
    height: 1rem;
    border: 2px solid #607d8b;
}

input[type="checkbox"]:checked:before {
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    transform: rotate(-45deg);
    height: .5rem;
    border-color: #03A9F4;
    border-top-style: none;
    border-right-style: none;
}

input[type="checkbox"]:indeterminate:before {
    top: 0.5rem;
    height: 0;
    border-color: #03A9F4;
    border-top-style: none;
    border-right-style: none;
}

input[type="checkbox"]:after {
    content: "";
    position: absolute;
    top: -0.125rem;
    left: 0;
    width: 1.1rem;
    height: 1.1rem;
    background: #fff;
    cursor: pointer;
}


/*introjs*/

.introjs-button {
    border-radius: 0;
    border-radius: 0;
    background: white;
    padding: .8em .6em;
    font-size: inherit;
}

.introjs-bullets ul li a {
    width: 16px;
    height: 16px;
}

.introjs-helperNumberLayer {
    left: -6px;
    background: linear-gradient(to bottom, #607d8b 0, #607d8b 100%);
    border-color: #03A9F4;
    border-radius: 0;
}

